# EXERCISES

./: README.md
Delivery_3/: README.md  empty_class3.sdf  follower_car.urdf  leader_car.urdf  leader_node.py  screen_recording.txt
Delivery_3/src/gazebo_follower/: package.xml  setup.cfg  setup.py
Delivery_3/src/gazebo_follower/gazebo_follower/: follower_node.py
Delivery_3/src/gazebo_follower/launch/: gazebo_follower.launch.py
Delivery_4/: README.md  fsm_robot.py  screen_recording.txt
Delivery_5/: publisher_takehome.py  subscriber.py
exercise_2/: DELIVERY_2.md  SESSION2_SUBMISSION_NOTES.md
exercise_2/src/action_msg/: CMakeLists.txt  package.xml
exercise_2/src/action_msg/action/: ReachEdgeAndReturn.action
exercise_2/src/reach_edge_action_server/: package.xml  setup.cfg  setup.py
exercise_2/src/reach_edge_action_server/reach_edge_action_server/: __init__.py  reach_edge_action_server.py
exercise_2/src/reach_edge_action_server/resource/: reach_edge_action_server
exercise_2/src/turtle_follower/: package.xml  setup.cfg  setup.py
exercise_2/src/turtle_follower/resource/: turtle_follower
exercise_2/src/turtle_follower/turtle_follower/: __init__.py  turtle_follower.py
exercise_2/src/turtle_rgb/: CMakeLists.txt  package.xml
exercise_2/src/turtle_rgb_server/: package.xml  setup.cfg  setup.py
exercise_2/src/turtle_rgb_server/resource/: turtle_rgb_server
exercise_2/src/turtle_rgb_server/turtle_rgb_server/: __init__.py  turtle_rgb_server.py
exercise_2/src/turtle_spawner/: package.xml  setup.cfg  setup.py
exercise_2/src/turtle_spawner/launch/: turtle_spawner.launch.py
exercise_2/src/turtle_spawner/resource/: turtle_spawner
exercise_2/src/turtle_spawner/turtle_spawner/: __init__.py  turtle_spawner.py
exercise_2/src/turtle_tf_broadcaster/: package.xml  setup.py
exercise_2/src/turtle_tf_broadcaster/turtle_tf_broadcaster/: turtle_tf_broadcaster.py
exercise_2/src/urdf_tutorial/: CMakeLists.txt  package.xml
exercise_2/src/urdf_tutorial/launch/: display.launch.py  display_human.launch.py  display_xacro.launch.py
exercise_2/src/urdf_tutorial/rviz/: human_body.rviz
exercise_2/src/urdf_tutorial/urdf/: simple_box.urdf.xml  simple_box.xacro
exercise_6_submission/: human_body.urdf.xacro
