<?xml version="1.0"?>
<package format="3">
  <name>reach_edge_action_server</name>
  <version>0.0.0</version>
  <description>Action server that drives a turtlesim turtle to the edge and back to the center.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>action_msg</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>turtlesim</depend>

  <exec_depend>python3-setuptools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>