<?xml version="1.0"?>
<package format="3">
  <name>turtle_follower</name>
  <version>0.0.0</version>
  <description>Turtle follower node that uses TF to track turtle1 from turtle2.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-setuptools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>