<?xml version="1.0"?>
<package format="3">
  <name>turtle_rgb_server</name>
  <version>0.0.0</version>
  <description>Python service server for the turtle RGB service.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>turtle_rgb</depend>

  <exec_depend>python3-setuptools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>