<?xml version="1.0"?>
<package format="3">
  <name>turtle_spawner</name>
  <version>0.0.0</version>
  <description>Spawner and TF broadcaster for two turtles in turtlesim.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>turtlesim</depend>

  <exec_depend>python3-setuptools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>